Fix demo figures alignment at smaller sizes

--- a/css/custom.css
+++ b/css/custom.css
@@ -838,10 +838,6 @@ code{padding:3px 4px;color:#df5c33;background-color:#f5f5f5;border:1px solid #e1
 .demos figure nav a:last-child{border-top-left-radius:0;border-bottom-left-radius:0;border-top-right-radius:3px;border-bottom-right-radius:3px}
 .demos figure nav a:only-child{-webkit-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-ms-border-radius:3px;border-radius:3px;}
 @media all and (max-width: 1000px) {
-.demos figure{float:left;width:48.5%;margin-left:0%;margin-right:3%;}
-.demos figure:last-child{margin-right:0%}
-}
-@media all and (max-width: 730px) {
 .demos > header{padding-bottom:10px;margin-bottom:20px}
 .demos figure{width:auto;max-width:400px;float:none !important;display:block;margin-right:auto !important;margin-left:auto !important;padding-left:15px;padding-right:15px;padding-bottom:20px;border-bottom:1px solid #eee;margin-bottom:20px}
 }
